@@ -1,3 +1,7 @@
+* 2014-03-19 - thorben.betten@open-xchange.com
+
+ - Fix for bug 31644: Properly collect available text parts on reply if original message contains multipart/alternative appendix
+
 * 2014-03-19 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 31646: Be aware of unknown folder type 
